# doc-chat-ai-backend

./: .gitignore  README.md  alembic.ini  celery_app.py  docker-compose.yml  pyproject.toml
agents/: chat_responder.py  explain_law.py  legal_responder.py  retriever_laws.py  technical_note.py
alembic/: env.py  script.py.mako
alembic/versions/: 20260321_01_create_ingestion_jobs.py  20260322_01_add_file_path_to_ingestion_jobs.py  20260322_02_add_metadata_hash_to_ingestion_jobs.py  20260415_01_create_chat_messages.py  20260421_01_migrate_chat_message_id_to_int.py  20260421_02_normalize_datetime_timezone.py
api/: agno_session_cleanup.py  exceptions.py  main.py  routers.py  services.py  tasks.py
api/chat_history/: store.py
api/ingestion/: __init__.py  constants.py  dtos.py  file_utils.py  hashers.py  indexer.py  job_store.py  metadata.py  orchestrator.py  storage.py  text_extractors.py  validators.py
config/: env_settings.py  llm_settings.py
db/: models.py  session.py
docs/: LC214.md  ec103.md  ec132.md  ec45.md  ec87.md  plp108.md
prompts/: chat_responder.py  chat_router.py  explain_law.py  legal_responder.py  retriever_laws.py  technical_note.py
schemas/: chat_history_delete_response.py  chat_message_item.py  chat_request.py  chat_router_decision.py  delete_response.py  file_item.py  pergunta.py  resposta_legal.py  resposta_simples.py  trechos_lei.py  upload_response.py
scripts/: index_laws.py  metadados.py  scraping.py
vectordb/: client_factory.py  connection.py  files_repository.py  filtered_qdrant.py  knowledge.py
